namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-app
spec:
  requests:
    memory: "64Mi"
    cpu: "250m"    
  limits:
    memory: "128Mi"
    cpu: "500m"
  quotas:
    hard:
      requests.cpu: "1"
      requests.memory: 1Gi
      limits.cpu: "2"
      limits.memory: 2Gi
