service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-service
  labels:
    app: argo
spec:
  selector:
    app: argo
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
