ingress.yaml
apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    namespace: web-app
    name: my-ingress
  spec:
    rules:
      - host: myapp.example.com
        http:
          paths:
            - path: ""
              pathType: Prefix
              backend:
                service:
                  name: arog-service
                  port:
                    number: 80
